--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 				==================================================== -->
 				<div id="wedding-subtitles">
 					<div class="wedding-overlay"></div>
-					<div class="wedding-cover text-center" data-stellar-background-ratio="0.5" >
-						<div class="desc  fadeInUp animated">
+					<div class="wedding-cover text-center" data-stellar-background-ratio="0.5"  style="background-image: url('./images/top.jpg');">
+						<div class="desc">
 							<h2>每一次 都是用心之作</h2>
 							<span>完美始于每一细节 精彩源于无限创意 </span>
 							<span><a class="btn btn-primary btn-lg" href="./view/contact.html">定制幸福</a></span>
@@ -84,7 +84,7 @@
 				<div id="wedding-mark">
 					<div class="container">
 						<div class="row">
-							<div class="col-md-4">
+							<div class="col-md-4 animate-box">
 								<div class="mark-left ">
 									<span class="icon">
 										<i class="iconfont icon-earth"></i>
@@ -97,7 +97,7 @@
 
 							</div>
 
-							<div class="col-md-4">
+							<div class="col-md-4 animate-box">
 								<div class="mark-left">
 									<span class="icon">
 										<i class="iconfont icon-office"></i>
@@ -109,7 +109,7 @@
 								</div>
 
 							</div>
-							<div class="col-md-4">
+							<div class="col-md-4 animate-box">
 								<div class="mark-left">
 									<span class="icon">
 										<i class="iconfont icon-pencil2"></i>
@@ -130,7 +130,7 @@
 				==================================================== -->
 				<div id="wedding-hotel" class="wedding-bg-color">
 					<div class="container">
-						<div class="row">
+						<div class="row animate-box">
 							<div class="col-md-12">
 								<div class="section-title text-center">
 									<h2>蜜月酒店</h2>
@@ -139,31 +139,31 @@
 						</div>
 						<div class="row">
 							<div class="honey-moon">
-								<div class="image diyi">
+								<div class="image diyi animate-box">
 									<div class="descrip text-center">
 										<p><small>优惠力度</small><span>199/晚</span></p>
 									</div>
 								</div>
-								<div class="desc">
+								<div class="desc animate-box">
 									<h3>简约现代</h3>
 									<p>简约的风格，齐备的功能，五星级的享受。 
 										简约的风格，齐备的功能，五星级的享受。 
 										简约的风格，齐备的功能，五星级的享受。
 									</p>
-									<p><a href="#" class="btn btn-primary btn-luxe-primary">立刻预定<i class="ti-angle-right"></i></a></p>
+									<p><a href="javascript:void(0)" class="btn btn-primary btn-luxe-primary">立刻预定<i class="ti-angle-right"></i></a></p>
 								</div>
 							</div>
 
 							<div class="honey-moon">
-								<div class="image dier">
+								<div class="image dier animate-box">
 									<div class="descrip text-center">
 										<p><small>优惠力度</small><span>199/晚</span></p>
 									</div>
 								</div>
-								<div class="desc">
+								<div class="desc animate-box">
 									<h3>浪漫田园</h3>
 									<p> 返璞归正，回归大自然，为您营造出一种温馨、自然、清新的的氛围和感觉。</p>
-									<p><a href="#" class="btn btn-primary btn-luxe-primary">立刻预定 <i class="ti-angle-right"></i></a></p>
+									<p><a href="javascript:void(0)" class="btn btn-primary btn-luxe-primary">立刻预定 <i class="ti-angle-right"></i></a></p>
 								</div>
 							</div>
 						</div>
@@ -177,31 +177,31 @@
 				<div id="wedding-travel">
 					<div class="container">
 						<div class="row">
-							<div class="col-md-12">
+							<div class="col-md-12 animate-box">
 								<div class="travel-title">
 									<h2>旅行婚礼</h2>
 								</div>
 							</div>
 
 							<div class="col-md-12">
-								<ul class="travel-content">							
-									<li class="one-third " style= "background-image: url(./images/travel1.jpg);">
+								<ul class="travel-content ">							
+									<li class="one-third animate-box " style= "background-image: url(./images/travel1.jpg);">
 										<div class="imgbg"></div>
 									</li>
 
-									<li class="one-third" style="background-image: url(./images/travel2.jpg); ">
+									<li class="one-third animate-box" style="background-image: url(./images/travel2.jpg); ">
 										<div class="imgbg"></div>
 									</li>
-									<li class="one-third" style="background-image: url(./images/travel3.jpg); ">
+									<li class="one-third animate-box" style="background-image: url(./images/travel3.jpg); ">
 										<div class="imgbg"></div>
 									</li>
-									<li class="one-third" style="background-image: url(./images/travel4.jpg); ">
+									<li class="one-third animate-box" style="background-image: url(./images/travel4.jpg); ">
 										<div class="imgbg"></div>
 									</li>
-									<li class="one-third" style="background-image: url(./images/travel5.jpg); ">
+									<li class="one-third animate-box" style="background-image: url(./images/travel5.jpg); ">
 										<div class="imgbg"></div>
 									</li>
-									<li class="one-third" style="background-image: url(./images/travel6.jpg); ">
+									<li class="one-third animate-box" style="background-image: url(./images/travel6.jpg); ">
 										<div class="imgbg"></div>
 									</li>
 								</ul>
@@ -216,14 +216,14 @@
 				==================================================== -->
 				<div id="wedding-assess">
 					<div class="row">
-						<div class="col-md-12 row-bg">
+						<div class="col-md-12 row-bg animate-box">
 							<div class="assess-title">
 								客户反馈
 							</div>
 
 						</div>
 
-						<div class="col-md-12">
+						<div class="col-md-12 animate-box">
 							<div class="assess-image">						
 								<div class="assess-overlay"></div>
 
